--- a/style.css
+++ b/style.css
@@ -259,3 +259,166 @@ section .title {
     background: none;
 }
 
+
+/* teams section styling */
+
+
+.teams .max-width {
+
+
+    top: 1px;
+    width: 100%;
+    background-color: #0E2A50;
+    height: 50vh;
+
+}
+
+
+.teams .carousel .card:hover {
+    background: #00DFA5;
+}
+
+.teams .carousel .card .box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+
+.teams .carousel .card:hover .box {
+    transform: scale(1.05);
+}
+
+
+.teams .carousel .card img {
+    height: 80px;
+    width: 360px;
+    object-fit: cover;
+    border-radius: 40px;
+    padding: 10px;
+
+    transition: all 0.3s ease;
+}
+
+.teams .carousel .card:hover img {
+    border-color: #fff;
+}
+
+.owl-dots {
+    text-align: end;
+    margin-bottom: 20 px;
+}
+
+.owl-dot {
+    height: 40px;
+    width: 40px;
+    margin: 0 5px;
+    outline: none !important;
+    border-radius: 50%;
+    border: 2px solid #00DFA5 !important;
+    transition: all 0.3s ease;
+}
+
+.owl-dot.active {
+    width: 35px;
+    border-radius: 14px;
+}
+
+.owl-dot.active,
+.owl-dot:hover {
+    background: #00DFA5 !important;
+}
+
+
+
+/* about section styling */
+.about {
+    background-color: blue;
+}
+
+.about .about-content .right .hire {
+    font-size: 2.5rem;
+    font-weight: 30;
+    color: yellow;
+}
+
+.about .about-content .right .why {
+    color: #fff;
+}
+
+.about .about-content .left {
+    width: 45%;
+}
+
+.about .about-content .left img {
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.about .about-content .right {
+    width: 55%;
+}
+
+.about .about-content .right .text {
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.about .about-content .right .text span {
+    color: crimson;
+}
+
+.about .about-content .right p {
+    text-align: justify;
+}
+
+.about .about-content .right a {
+    display: inline-block;
+    background: #112B49;
+    color: yellow;
+    font-size: 1 rem;
+    font-weight: 500;
+    padding: 20px 10px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid yellow;
+    transition: all 0.3s ease;
+}
+
+.about .about-content .right .btnGreen {
+    display: inline-block;
+    background: #112B49;
+    color: #009D4D;
+    font-size: 1 rem;
+    font-weight: 500;
+    padding: 20px 20px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #009D4D;
+    transition: all 0.3s ease;
+}
+
+.about .about-content .right .btnPink {
+    display: inline-block;
+    background: #112B49;
+    color: #CB1ABF;
+    font-size: 1 rem;
+    font-weight: 500;
+    padding: 20px 10px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #CB1ABF;
+    transition: all 0.3s ease;
+}
+
+
+
+
+.about .about-content .right a:hover {
+    color: crimson;
+    background: none;
+}
